test/neg/float.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


; Horn Constraints
(constraint (forall ((x unknown [given FReal])(y unknown [given FReal])(v3 unknown [given FReal])) (=> (and (= v1 0.200000) (and (= v2 (+ 0.900000 x)) True)) (= y 1.00000))))
